--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="images/bhai.jfif">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body bgcolor="grey">
     <div class="nav">
         <h1>Briyani Bhai👨‍🍳 </h1>
 
